# minigpt

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 1_overview_tutorial.ipynb  2_sample_tutorial.ipynb  sample.py  training.py  tutorial.ipynb
src/minigpt/: trainer.py
src/minigpt/callbacks/: __init__.py  abstract_callback.py  callback.py
src/minigpt/config/: __init__.py  config.py  gpt_config.json
src/minigpt/data/: dataloader.py  utils.py
src/minigpt/data/redpajama/: process_dataset.py
src/minigpt/data/the_verdict/: process_dataset.py
src/minigpt/data/tinyshakespeare/: process_dataset.py
src/minigpt/lightning/: gpt_module.py  lightning_module.py
src/minigpt/loggers/: __init__.py  abstract_logger.py  logger.py
src/minigpt/model/: abstract_decoder.py  abstract_model.py  transformer.py
src/minigpt/tests/: test_config.py  test_dataloader.py  test_logger.py  test_model.py  test_trainer.py
src/minigpt/utils/: generation_utils.py  utils.py
